# forrs-data

./: .gitignore  Cargo.toml  LICENSE  Migrant.example.toml  README.md
.github/workflows/: rust_tests.yml
forrs-data/: Cargo.toml  Migrant.example.toml
forrs-data/migrations/20190926081527_initial-create/: up.sql
forrs-data/src/: lib.rs  model.rs  sql.rs
forrs-data/src/model/: post.rs
forrs-data/src/sql/: const_traits.rs  from_row.rs  insert.rs  into_insert.rs  table.rs
forrs-stm/: Cargo.toml
forrs-stm/src/: db.rs  error.rs  id.rs  lib.rs  traits.rs
migrations-32/20190926081527_initial-create/: up.sql
migrations/20190926081527_initial-create/: down.sql  up.sql
src/: lib.rs  model.rs  sql.rs
src/model/: id.rs  post.rs
src/sql/: from_row.rs  id.rs  insertable.rs  into_insert.rs  table.rs
