[package]
name = "forrs-data"
version = "0.0.2"
authors = ["Follpvosten <wolfi@karpador.xyz>"]
edition = "2018"

[features]
default = []
mysql = ["mysql_async", "mysql_common"]
big-numbers = []

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
mysql_async = { version = "0.21.0-alpha.1", features = ["nightly"], optional = true }
mysql_common = { version = "0.18", optional = true }